--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BookManagement">
-        <activity android:name=".AddBookActivity"></activity>
+        <activity android:name=".EditBookActivity"></activity>
         <activity android:name=".WebsiteActivity" />
         <activity
             android:name=".FavoriteBooksActivity"
